# OrderManagementApi/Controllers/ProductController.cs
@@ -1,5 +1,6 @@
 using FluentValidation;
 using FluentValidation.Results;
+using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using OrderManagement.Application.DTOs;
 using OrderManagement.Application.Interfaces;
@@ -10,6 +11,7 @@ namespace OrderManagementApi.Controllers
 {
     [Route("api/[controller]")]
     [ApiController]
+    [Authorize]
     public class ProductController(IProductService productService) : ControllerBase
     {
         #region Gerenciamento de Produtos
