# OrderManagementApi/Requests/LoginRequest.cs
@@ -1,0 +1,8 @@
+namespace OrderManagementApi.Requests
+{
+    public class LoginRequest
+    {
+        public string Cpf { get; set; }
+        public string Password { get; set; }
+    }
+}
