# OrderManagementApi/Requests/RefreshTokenRequest.cs
@@ -1,0 +1,8 @@
+namespace OrderManagementApi.Requests
+{
+    public class RefreshTokenRequest
+    {
+        public string AccessToken { get; set; }
+        public string RefreshToken { get; set; }
+    }
+}
