# OrderManagementApi/Requests/ResetPasswordRequest.cs
@@ -1,0 +1,8 @@
+namespace OrderManagementApi.Requests
+{
+    public class ResetPasswordRequest
+    {
+        public string Cpf { get; set; }
+        public string NewPassword { get; set; }
+    }
+}
